--- a/assets/psy_skill.css
+++ b/assets/psy_skill.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0 auto;
     scroll-behavior: smooth;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 article{
